feat(edith): integrar gateway cognitivo E.D.I.T.H. e endurecer seguranca
Adiciona adapter HTTP alinhado ao contrato SDK 0.4.1, tool bridge HMAC em
/api/internal/edith/tools, feature flag EDITH_ENABLED, assistente Angular e
migracoes Flyway V3-V7 com testes de contrato e integracao.

Co-authored-by: Cursor <cursoragent@cursor.com>